--- a/pqr/Dockerfile
+++ b/pqr/Dockerfile
@@ -1,13 +1,17 @@
 FROM ubuntu:jammy
 
 ARG R_VERSION=4.3.2
-ARG QUARTO_VERSION=1.4.470
+ARG QUARTO_VERSION=1.4.533
+ARG PYTHON_VERSION=3.10.13
 
 RUN apt-get update -y \ 
     && apt-get install -y curl gdebi-core \
     && curl -O https://cdn.rstudio.com/r/ubuntu-2204/pkgs/r-${R_VERSION}_1_amd64.deb \
     && gdebi -n r-${R_VERSION}_1_amd64.deb \
     && rm r-${R_VERSION}_1_amd64.deb \
+    && curl -O https://cdn.rstudio.com/python/ubuntu-2204/pkgs/python-${PYTHON_VERSION}_1_amd64.deb \
+    && apt-get install -yq --no-install-recommends ./python-${PYTHON_VERSION}_1_amd64.deb \
+    && rm -f ./python-${PYTHON_VERSION}_1_amd64.deb \
     && curl -o quarto-linux-amd64.deb -L https://github.com/quarto-dev/quarto-cli/releases/download/v${QUARTO_VERSION}/quarto-${QUARTO_VERSION}-linux-amd64.deb \
     && gdebi -n ./quarto-linux-amd64.deb \
     && rm quarto-linux-amd64.deb
