--- a/.github/workflows/build-push-publish.yml
+++ b/.github/workflows/build-push-publish.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  docker:
+  build:
     strategy:
       matrix:
         R_VERSION: ["4.3.2", "4.4.1"]
@@ -37,3 +37,17 @@ jobs:
           push: true
           tags: |
             ghcr.io/edavidaja/pqr:python${{ matrix.PYTHON_VERSION }}-quarto${{ matrix.QUARTO_VERSION }}-r${{ matrix.R_VERSION }}
+
+  publish:
+    needs: build
+    strategy:
+      matrix:
+        R_VERSION: ["4.3.2", "4.4.1"]
+        PYTHON_VERSION: ["3.9.19", "3.10.14", "3.11.9", "3.12.3"]
+        QUARTO_VERSION: ["1.4.555", "1.5.45"]
+    runs-on: ubuntu-latest
+    environment: colorado
+    steps:
+      - name: Publish
+        run: |
+          deno run --allow-env --allow-net update-connect.ts
