--- a/.github/workflows/build-push-publish.yml
+++ b/.github/workflows/build-push-publish.yml
@@ -48,6 +48,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: colorado
     steps:
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+
       - name: Publish
         run: |
           deno run --allow-env --allow-net update-connect.ts
