--- a/.github/workflows/build-push-publish.yml
+++ b/.github/workflows/build-push-publish.yml
@@ -48,6 +48,9 @@ jobs:
     runs-on: ubuntu-latest
     environment: colorado
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
