--- a/.github/workflows/build-push-publish.yml
+++ b/.github/workflows/build-push-publish.yml
@@ -57,4 +57,4 @@ jobs:
 
       - name: Publish
         run: |
-          deno run --allow-env --allow-net update-connect.ts
+          deno run --allow-env --allow-net publish.ts
