--- a/.github/workflows/build-push-publish.yml
+++ b/.github/workflows/build-push-publish.yml
@@ -60,7 +60,7 @@ jobs:
           PYTHON_VERSION: ${{ matrix.PYTHON_VERSION }}
           QUARTO_VERSION: ${{ matrix.QUARTO_VERSION }}
           R_VERSION: ${{ matrix.R_VERSION }}
-          CONNECT_SERVER: ${{ env.CONNECT_SERVER }}
+          CONNECT_SERVER: ${{ vars.CONNECT_SERVER }}
           CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }}
         run: |
           deno run --allow-env --allow-net publish.ts
