--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -7,9 +7,9 @@ jobs:
   build:
     strategy:
       matrix:
-        PYTHON_VERSION: ["3.9.21", "3.10.16", "3.11.11", "3.12.7", "3.13.1"]
-        QUARTO_VERSION: ["1.5.56", "1.6.40"]
-        R_VERSION: ["4.0.5", "4.1.3", "4.2.3", "4.3.3", "4.4.2"]
+        PYTHON_VERSION: ["3.10.17", "3.11.12", "3.12.10", "3.13.3"]
+        QUARTO_VERSION: ["1.7.31"]
+        R_VERSION: ["4.2.3", "4.3.3", "4.4.3", "4.5.0"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
